javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.22.INVALIDRETURN.1.javali
// Test Check valid returntype
// rule 2.3.22

class Main {
	
	int m(){
		return 5>7;
	}
	
	void main() {
		int x;
		x = m();

	}
}